# Easylang

./: CMakeLists.txt
Easylang/: Easylang.cpp  Easylang.h
Easylang/headerfiles/: AST.hpp  Codegen.hpp  Lexer.hpp  Parser.hpp
Easylang/src/: Codegen.cpp  Lexer.cpp  Parser.cpp
